// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should open and close the menu 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  padding: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  box-sizing: border-box;
  width: 100%;
  position: fixed;
  z-index: 50;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-1 {
  cursor: pointer;
  height: 3rem;
  width: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  --tw-bg-opacity: 0.75;
  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
  border-radius: 0.375rem;
  border-top-left-radius: 0.125rem;
  border-bottom-right-radius: 0.125rem;
  transition-property: all;
  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
  transition-duration: 300ms;
  visibility: visible;
}

.emotion-2 {
  height: 2rem;
  width: 2rem;
}

.emotion-3 {
  cursor: pointer;
  height: 3rem;
  width: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  top: 0px;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0);
  visibility: hidden;
  left: 100%;
}

.emotion-4 {
  position: fixed;
  top: 0px;
  width: 18rem;
  height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  --tw-bg-opacity: 0.9;
  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
  transition-duration: 300ms;
  --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1),0 1px 2px 0 rgba(0, 0, 0, 0.06);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),var(--tw-ring-shadow, 0 0 #0000),var(--tw-shadow);
  visibility: hidden;
  right: -20rem;
}

.emotion-5 {
  cursor: pointer;
  height: 3rem;
  width: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
  --tw-text-opacity: 1;
  color: rgba(90, 94, 0, var(--tw-text-opacity));
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  line-height: 1.5rem;
  width: 100%;
  padding-left: 2rem;
  margin-top: 1.5rem;
  font-size: 1.875rem;
  line-height: 2.25rem;
  --tw-text-opacity: 1;
  color: rgba(0, 0, 0, var(--tw-text-opacity));
}

.emotion-7:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-7:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-7:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-7:first-of-type {
  margin-top: 0px;
}

.emotion-7:hover {
  --tw-text-opacity: 1;
  color: rgba(0, 104, 69, var(--tw-text-opacity));
}

.emotion-7:active {
  --tw-text-opacity: 1;
  color: rgba(0, 104, 69, var(--tw-text-opacity));
}

.emotion-10 {
  grid-column-start: 3;
  font-family: "Signika Negative";
  font-weight: 700;
  font-size: 2.25rem;
  line-height: 2.5rem;
  --tw-bg-opacity: 0.75;
  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
  padding: 0.5rem;
  border-radius: 0.375rem;
  border-top-right-radius: 0.125rem;
  border-bottom-left-radius: 0.125rem;
  visibility: visible;
}

<header
  class="emotion-0"
>
  <button
    aria-label="Open navigation menu"
    class="emotion-1"
  >
    <svg
      aria-hidden="true"
      class="emotion-2"
    >
      <use
        xlink:href="#icon-bars"
      />
    </svg>
  </button>
  <button
    aria-hidden="true"
    class="emotion-3"
  />
  <nav
    aria-expanded="false"
    class="emotion-4"
  >
    <button
      aria-label="Close navigation menu"
      class="emotion-5"
    >
      <svg
        aria-hidden="true"
        class="emotion-2"
      >
        <use
          xlink:href="#icon-close"
        />
      </svg>
    </button>
    <a
      class="emotion-7"
      href="/minusta/"
    >
      Minusta
    </a>
    <a
      class="emotion-7"
      href="/blogi/"
    >
      Blogi
    </a>
    <a
      class="emotion-7"
      href="/ota-yhteytta/"
    >
      Ota yhteyttä
    </a>
  </nav>
  <h2
    class="emotion-10"
    id="lauri-lavanti"
  >
    Lauri Lavanti
  </h2>
</header>
`;

exports[`<Header /> should render 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  padding: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  box-sizing: border-box;
  width: 100%;
  position: fixed;
  z-index: 50;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-1 {
  cursor: pointer;
  height: 3rem;
  width: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  --tw-bg-opacity: 0.75;
  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
  border-radius: 0.375rem;
  border-top-left-radius: 0.125rem;
  border-bottom-right-radius: 0.125rem;
  transition-property: all;
  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
  transition-duration: 300ms;
  visibility: visible;
}

.emotion-2 {
  height: 2rem;
  width: 2rem;
}

.emotion-3 {
  cursor: pointer;
  height: 3rem;
  width: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  top: 0px;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0);
  visibility: hidden;
  left: 100%;
}

.emotion-4 {
  position: fixed;
  top: 0px;
  width: 18rem;
  height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  --tw-bg-opacity: 0.9;
  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
  transition-duration: 300ms;
  --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1),0 1px 2px 0 rgba(0, 0, 0, 0.06);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),var(--tw-ring-shadow, 0 0 #0000),var(--tw-shadow);
  visibility: hidden;
  right: -20rem;
}

.emotion-5 {
  cursor: pointer;
  height: 3rem;
  width: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
  --tw-text-opacity: 1;
  color: rgba(90, 94, 0, var(--tw-text-opacity));
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  line-height: 1.5rem;
  width: 100%;
  padding-left: 2rem;
  margin-top: 1.5rem;
  font-size: 1.875rem;
  line-height: 2.25rem;
  --tw-text-opacity: 1;
  color: rgba(0, 0, 0, var(--tw-text-opacity));
}

.emotion-7:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-7:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-7:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-7:first-of-type {
  margin-top: 0px;
}

.emotion-7:hover {
  --tw-text-opacity: 1;
  color: rgba(0, 104, 69, var(--tw-text-opacity));
}

.emotion-7:active {
  --tw-text-opacity: 1;
  color: rgba(0, 104, 69, var(--tw-text-opacity));
}

.emotion-10 {
  grid-column-start: 3;
  font-family: "Signika Negative";
  font-weight: 700;
  font-size: 2.25rem;
  line-height: 2.5rem;
  --tw-bg-opacity: 0.75;
  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
  padding: 0.5rem;
  border-radius: 0.375rem;
  border-top-right-radius: 0.125rem;
  border-bottom-left-radius: 0.125rem;
  visibility: visible;
}

<header
  class="emotion-0"
>
  <button
    aria-label="Open navigation menu"
    class="emotion-1"
  >
    <svg
      aria-hidden="true"
      class="emotion-2"
    >
      <use
        xlink:href="#icon-bars"
      />
    </svg>
  </button>
  <button
    aria-hidden="true"
    class="emotion-3"
  />
  <nav
    aria-expanded="false"
    class="emotion-4"
  >
    <button
      aria-label="Close navigation menu"
      class="emotion-5"
    >
      <svg
        aria-hidden="true"
        class="emotion-2"
      >
        <use
          xlink:href="#icon-close"
        />
      </svg>
    </button>
    <a
      class="emotion-7"
      href="/minusta/"
    >
      Minusta
    </a>
    <a
      class="emotion-7"
      href="/blogi/"
    >
      Blogi
    </a>
    <a
      class="emotion-7"
      href="/ota-yhteytta/"
    >
      Ota yhteyttä
    </a>
  </nav>
  <h2
    class="emotion-10"
    id="lauri-lavanti"
  >
    Lauri Lavanti
  </h2>
</header>
`;

exports[`<Header /> should render front page 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  padding: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  box-sizing: border-box;
  width: 100%;
  position: fixed;
  z-index: 50;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-1 {
  cursor: pointer;
  height: 3rem;
  width: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  --tw-bg-opacity: 0.75;
  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
  border-radius: 0.375rem;
  border-top-left-radius: 0.125rem;
  border-bottom-right-radius: 0.125rem;
  transition-property: all;
  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
  transition-duration: 300ms;
  visibility: visible;
}

.emotion-2 {
  height: 2rem;
  width: 2rem;
}

.emotion-3 {
  cursor: pointer;
  height: 3rem;
  width: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  top: 0px;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0);
  visibility: hidden;
  left: 100%;
}

.emotion-4 {
  position: fixed;
  top: 0px;
  width: 18rem;
  height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  --tw-bg-opacity: 0.9;
  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
  transition-duration: 300ms;
  --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1),0 1px 2px 0 rgba(0, 0, 0, 0.06);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),var(--tw-ring-shadow, 0 0 #0000),var(--tw-shadow);
  visibility: hidden;
  right: -20rem;
}

.emotion-5 {
  cursor: pointer;
  height: 3rem;
  width: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
  --tw-text-opacity: 1;
  color: rgba(90, 94, 0, var(--tw-text-opacity));
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  line-height: 1.5rem;
  width: 100%;
  padding-left: 2rem;
  margin-top: 1.5rem;
  font-size: 1.875rem;
  line-height: 2.25rem;
  --tw-text-opacity: 1;
  color: rgba(0, 0, 0, var(--tw-text-opacity));
}

.emotion-7:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-7:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-7:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-7:first-of-type {
  margin-top: 0px;
}

.emotion-7:hover {
  --tw-text-opacity: 1;
  color: rgba(0, 104, 69, var(--tw-text-opacity));
}

.emotion-7:active {
  --tw-text-opacity: 1;
  color: rgba(0, 104, 69, var(--tw-text-opacity));
}

.emotion-10 {
  grid-column-start: 3;
  font-family: "Signika Negative";
  font-weight: 700;
  font-size: 2.25rem;
  line-height: 2.5rem;
  --tw-bg-opacity: 0.75;
  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
  padding: 0.5rem;
  border-radius: 0.375rem;
  border-top-right-radius: 0.125rem;
  border-bottom-left-radius: 0.125rem;
  visibility: hidden;
}

<header
  class="emotion-0"
>
  <button
    aria-label="Open navigation menu"
    class="emotion-1"
  >
    <svg
      aria-hidden="true"
      class="emotion-2"
    >
      <use
        xlink:href="#icon-bars"
      />
    </svg>
  </button>
  <button
    aria-hidden="true"
    class="emotion-3"
  />
  <nav
    aria-expanded="false"
    class="emotion-4"
  >
    <button
      aria-label="Close navigation menu"
      class="emotion-5"
    >
      <svg
        aria-hidden="true"
        class="emotion-2"
      >
        <use
          xlink:href="#icon-close"
        />
      </svg>
    </button>
    <a
      class="emotion-7"
      href="/minusta/"
    >
      Minusta
    </a>
    <a
      class="emotion-7"
      href="/blogi/"
    >
      Blogi
    </a>
    <a
      class="emotion-7"
      href="/ota-yhteytta/"
    >
      Ota yhteyttä
    </a>
  </nav>
  <h2
    class="emotion-10"
    id="lauri-lavanti"
  >
    Lauri Lavanti
  </h2>
</header>
`;

exports[`<Header /> should render opened menu 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  padding: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  box-sizing: border-box;
  width: 100%;
  position: fixed;
  z-index: 50;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-1 {
  cursor: pointer;
  height: 3rem;
  width: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  --tw-bg-opacity: 0.75;
  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
  border-radius: 0.375rem;
  border-top-left-radius: 0.125rem;
  border-bottom-right-radius: 0.125rem;
  transition-property: all;
  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
  transition-duration: 300ms;
  visibility: hidden;
}

.emotion-2 {
  height: 2rem;
  width: 2rem;
}

.emotion-3 {
  cursor: pointer;
  height: 3rem;
  width: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  top: 0px;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0);
  visibility: visible;
  left: 0px;
}

.emotion-4 {
  position: fixed;
  top: 0px;
  width: 18rem;
  height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  --tw-bg-opacity: 0.9;
  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
  transition-duration: 300ms;
  --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1),0 1px 2px 0 rgba(0, 0, 0, 0.06);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),var(--tw-ring-shadow, 0 0 #0000),var(--tw-shadow);
  visibility: visible;
  right: 0px;
}

.emotion-5 {
  cursor: pointer;
  height: 3rem;
  width: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
  --tw-text-opacity: 1;
  color: rgba(90, 94, 0, var(--tw-text-opacity));
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  line-height: 1.5rem;
  width: 100%;
  padding-left: 2rem;
  margin-top: 1.5rem;
  font-size: 1.875rem;
  line-height: 2.25rem;
  --tw-text-opacity: 1;
  color: rgba(0, 0, 0, var(--tw-text-opacity));
}

.emotion-7:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-7:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-7:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-7:first-of-type {
  margin-top: 0px;
}

.emotion-7:hover {
  --tw-text-opacity: 1;
  color: rgba(0, 104, 69, var(--tw-text-opacity));
}

.emotion-7:active {
  --tw-text-opacity: 1;
  color: rgba(0, 104, 69, var(--tw-text-opacity));
}

.emotion-10 {
  grid-column-start: 3;
  font-family: "Signika Negative";
  font-weight: 700;
  font-size: 2.25rem;
  line-height: 2.5rem;
  --tw-bg-opacity: 0.75;
  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
  padding: 0.5rem;
  border-radius: 0.375rem;
  border-top-right-radius: 0.125rem;
  border-bottom-left-radius: 0.125rem;
  visibility: visible;
}

<header
  class="emotion-0"
>
  <button
    aria-label="Open navigation menu"
    class="emotion-1"
  >
    <svg
      aria-hidden="true"
      class="emotion-2"
    >
      <use
        xlink:href="#icon-bars"
      />
    </svg>
  </button>
  <button
    aria-hidden="true"
    class="emotion-3"
  />
  <nav
    aria-expanded="true"
    class="emotion-4"
  >
    <button
      aria-label="Close navigation menu"
      class="emotion-5"
    >
      <svg
        aria-hidden="true"
        class="emotion-2"
      >
        <use
          xlink:href="#icon-close"
        />
      </svg>
    </button>
    <a
      class="emotion-7"
      href="/minusta/"
    >
      Minusta
    </a>
    <a
      class="emotion-7"
      href="/blogi/"
    >
      Blogi
    </a>
    <a
      class="emotion-7"
      href="/ota-yhteytta/"
    >
      Ota yhteyttä
    </a>
  </nav>
  <h2
    class="emotion-10"
    id="lauri-lavanti"
  >
    Lauri Lavanti
  </h2>
</header>
`;
